BACKGROUND: Layout the structure of the background

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+  crossorigin="anonymous">
+  document.getElementsByClassName("mainGame").style.backgroundImage = "url('images/cartoon-underwater.jpg')";
+}
+</script>
   <script src = "js/main.js" async></script>
     <title></title>
   </head>
   <body>
 
 <div class="title">
-<h1>THE TITLE</h1>
+<h1>SSC BATTLESHIP FRONTIER</h1>
 </div>
 <div class="wrapper">
 
@@ -135,10 +138,6 @@
       </tr>
   </table>
 
-</div>
-
-<div class="picture">
-<p>Picture</p>
 </div>
 </div>
 <div class="footer">
