PROFILE: At the start of the game after the manual the user enters their name and it is then dispayed on the game screen || added a new cursor for the screen

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 <div class="playerInformation">
 <h2>Player Information</h2>
-<p class="pName"></p>
-<p class="pScore">Score: </p>
+<p class="pName">...</p>
+<p class="score">Score: <span class="pScore"></span></p>
 </div>
 
 <div class="mainGame">
