GAME: Altered appearance and added number of Cannons to the screen for the user to see

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   </head>
   <body>
-    <div id="myModal" class="modal">
+    <div id="myModal" class="modalManual">
 
       <!-- Modal content -->
       <div class="modal-content">
@@ -34,7 +34,7 @@
   <div>
 
     <label for="fname">What Is Your Name Capt': </label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name.." class="fnameTextBox">
+    <input type="text" id="fname" name="firstname" placeholder="" class="fnameTextBox">
     <span class="close"><input type="submit" value="Submit"></span>
 
 </div>
@@ -44,6 +44,42 @@
       </div>
 
     </div>
+
+    <!-- <div id="myModal" class="modalWin">
+
+      <div class="modal-content">
+        <div class="modal-header">
+
+          <h2>SSC BATTLESHIP FRONTIER:WINNER</h2>
+        </div>
+        <div class="modal-body">
+  <h3 style="text-decoration:underline;">CONGRATULATIONS YOU HAVE DEFEATED THE OTHER UNDERWATER PIRATES!</h3>
+  <p style="text-decoration:underline;">HERE IS YOUR TREASURE</p>
+  <p><img src="images/Treasure.png" alt="Treasure" width="450" height="400"></p>
+        </div>
+      </div>
+    </div>
+
+   <div id="myModal" class="modalLoss">
+
+      <div class="modal-content">
+        <div class="modal-header">
+
+          <h2>SSC BATTLESHIP FRONTIER: GAME OVER</h2>
+        </div>
+        <div class="modal-body">
+  <h3 style="text-decoration:underline;">YOU HAVE BEEN DEFEATED BY THE UNDERWATER PIRATES!</h3>
+  <p style="text-decoration:underline;">"THROW 'EM IN THE CELL MWAHAHAHAHA"</p>
+  <p><img src="images/Treasure.png" alt="Treasure" width="450" height="390"></p>
+  <div>
+    <label for="fname">Would You Like To Try again? </label>
+    <button class="gameOverBtn">Try Again</button>
+  </div>
+
+        </div>
+      </div>
+    </div>  -->
+
 
 
 <div class="title">
@@ -55,6 +91,7 @@
 <h2>Player Information</h2>
 <p class="pName">...</p>
 <p class="score">Score: <span class="pScore"></span></p>
+<p class="score">Cannonball: <span class="pCannon"></span></p>
 </div>
 
 <div class="mainGame">
