GAME: Added a feature that shows the user where they currently picked, added a screen to show how many pirates are left

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 <h2>Player Information</h2>
 <p class="pName">...</p>
 <p class="score">Score: <span class="pScore"></span></p>
-<p class="score">Cannonball: <span class="pCannon"></span></p>
+<p class="">Cannonball: <span class="pCannon"></span></p>
+<p class="">Pirates Left: <span class="pPirates"></span></p>
 </div>
 
 <div class="mainGame">
