GAME: If user score is 0 is will not be negative | if user clicks grid that has a value assigned to them already it will do nothing

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     </div>
 
-    <!-- <div id="myModal" class="modalWin">
+   <div id="myModal2" class="modalWin">
 
       <div class="modal-content">
         <div class="modal-header">
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-   <div id="myModal" class="modalLoss">
+   <div id="myModal3" class="modalLoss">
 
       <div class="modal-content">
         <div class="modal-header">
@@ -78,7 +78,7 @@
 
         </div>
       </div>
-    </div>  -->
+    </div>
 
 
 
