SOUND: Added a sound file to add effects to the gameplay | Added gifs to create animation on the game

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
   </head>
   <body>
+    <audio controls autoplay>
+  <source src="audio/horse.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+</audio>
+
     <div id="myModal" class="modalManual">
 
       <!-- Modal content -->
@@ -55,7 +60,7 @@
         <div class="modal-body">
   <h3 style="text-decoration:underline;">CONGRATULATIONS YOU HAVE DEFEATED THE OTHER UNDERWATER PIRATES!</h3>
   <p style="text-decoration:underline;">HERE IS YOUR TREASURE</p>
-  <p><img src="images/Treasure.png" alt="Treasure" width="450" height="400"></p>
+  <p><img src="images/treasure.gif" alt="Treasure" width="450" height="400"></p>
         </div>
       </div>
     </div>
@@ -70,7 +75,7 @@
         <div class="modal-body">
   <h3 style="text-decoration:underline;">YOU HAVE BEEN DEFEATED BY THE UNDERWATER PIRATES!</h3>
   <p style="text-decoration:underline;">"THROW 'EM IN THE CELL MWAHAHAHAHA"</p>
-  <p><img src="images/Treasure.png" alt="Treasure" width="450" height="390"></p>
+  <p><img src="images/pirate-flag.gif" alt="Treasure" width="450" height="390"></p>
   <div>
     <label for="fname">Would You Like To Try again? </label>
     <button class="gameOverBtn">Try Again</button>
