--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
 
   </head>
   <body>
-    <audio controls autoplay>
-  <source src="audio/horse.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-</audio>
-
     <div id="myModal" class="modalManual">
 
       <!-- Modal content -->
@@ -31,7 +26,7 @@
           <h2>SSC BATTLESHIP FRONTIER: Starter Manual</h2>
         </div>
         <div class="modal-body">
-  <h3 style="text-decoration:underline;">Mission Brief For Yee Withered Souls!</h3>
+  <h3>Mission Brief For Yee Withered Souls!</h3>
   <p>Listen Up! For Yee In For a Bounty of Treasure</p>
   <p>These Sally Wags Have Gone Underwater For The Treasure</p>
   <p>Take Them Pirates Out To Gain The Treasure!!! </p>
@@ -58,8 +53,8 @@
           <h2>SSC BATTLESHIP FRONTIER:WINNER</h2>
         </div>
         <div class="modal-body">
-  <h3 style="text-decoration:underline;">CONGRATULATIONS YOU HAVE DEFEATED THE OTHER UNDERWATER PIRATES!</h3>
-  <p style="text-decoration:underline;">HERE IS YOUR TREASURE</p>
+  <h3>CONGRATULATIONS YOU HAVE DEFEATED THE OTHER UNDERWATER PIRATES!</h3>
+  <p>HERE IS YOUR TREASURE</p>
   <p><img src="images/treasure.gif" alt="Treasure" width="450" height="400"></p>
         </div>
       </div>
@@ -75,7 +70,7 @@
         <div class="modal-body">
   <h3 style="text-decoration:underline;">YOU HAVE BEEN DEFEATED BY THE UNDERWATER PIRATES!</h3>
   <p style="text-decoration:underline;">"THROW 'EM IN THE CELL MWAHAHAHAHA"</p>
-  <p><img src="images/pirate-flag.gif" alt="Treasure" width="450" height="390"></p>
+  <p><img src="images/pirate-flag.gif" alt="Treasure" width="500" height="450"></p>
   <div>
     <label for="fname">Would You Like To Try again? </label>
     <button class="gameOverBtn">Try Again</button>
