Final First Sprint: Ready To Be Merged

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <body>
     <div id="myModal" class="modalManual">
 
-      <!-- Modal content -->
+
       <div class="modal-content">
         <div class="modal-header">
-          <!-- <span class="close">&times;</span> -->
+
           <h2>SSC BATTLESHIP FRONTIER: Starter Manual</h2>
         </div>
         <div class="modal-body">
@@ -92,7 +92,7 @@
 <p class="pName">...</p>
 <p class="score">Score: <span class="pScore"></span></p>
 <p class="">Cannonball: <span class="pCannon"></span></p>
-<p class="">Pirates Left: <span class="pPirates"></span></p>
+<p class="">Pirate's Left: <span class="pPirates"></span></p>
 </div>
 
 <div class="mainGame">
