Final Checks for Merge Ready

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
         <div class="modal-body">
   <h3>CONGRATULATIONS YOU HAVE DEFEATED THE OTHER UNDERWATER PIRATES!</h3>
   <p>HERE IS YOUR TREASURE</p>
-  <p><img src="images/treasure.gif" alt="Treasure" width="450" height="400"></p>
+  <p class="pName">...</p>
+  <p class="score">Score: <span class="pScore"></span></p>
+  <p><img src="images/treasure.gif" alt="Treasure" width="650" height="300"></p>
         </div>
       </div>
     </div>
@@ -68,9 +70,11 @@
           <h2>SSC BATTLESHIP FRONTIER: GAME OVER</h2>
         </div>
         <div class="modal-body">
-  <h3 style="text-decoration:underline;">YOU HAVE BEEN DEFEATED BY THE UNDERWATER PIRATES!</h3>
-  <p style="text-decoration:underline;">"THROW 'EM IN THE CELL MWAHAHAHAHA"</p>
-  <p><img src="images/pirate-flag.gif" alt="Treasure" width="500" height="450"></p>
+  <h3>YOU HAVE BEEN DEFEATED BY THE UNDERWATER PIRATES!</h3>
+  <p>"THROW 'EM IN THE CELL MWAHAHAHAHA"</p>
+  <p class="pName">...</p>
+  <p class="score">Score: <span class="pScore"></span></p>
+  <p><img src="images/pirate-flag.gif" alt="pirate-flag" width="800" height="250"></p>
   <div>
     <label for="fname">Would You Like To Try again? </label>
     <button class="gameOverBtn">Try Again</button>
@@ -208,6 +212,9 @@
       </tr>
   </table>
 
+</div>
+<div class="image">
+  <img src="images/pirate-gang.gif" alt="pirate gang">
 </div>
 </div>
 
