Style-Layout: Edited the css file to change the appearance of the font/ layout

--- a/SSCBattleShips.html
+++ b/SSCBattleShips.html
@@ -13,7 +13,7 @@
 }
 </script>
   <script src = "js/main.js" async></script>
-    <title>SSC BATTLESHIPS</title>
+    <title>SSC PIRATE BATTLESHIPS</title>
 
   </head>
   <body>
@@ -22,18 +22,17 @@
   </audio> -->
     <div id="myModal" class="modalManual">
 
-
       <div class="modal-content">
         <div class="modal-header">
 
-          <h2>SSC BATTLESHIP FRONTIER: Starter Manual</h2>
+          <h2>SSC PIRATE BATTLESHIPS: Starter Manual</h2>
         </div>
         <div class="modal-body">
   <h3>Mission Brief For Yee Withered Souls!</h3>
   <p>Listen Up! For Yee In For a Bounty of Treasure</p>
   <p>These Scally Wags Have Gone Underwater For The Treasure</p>
   <p>Take Them Pirates Out To Gain The Treasure!!! </p>
-  <p style="border: 3px solid black;"> Eliminate The Ships By Selecting The Correct Place On The Grid</p>
+  <p class="missionBrief"> Eliminate The Ships By Selecting The Correct Place On The Grid</p>
 
   <div>
 
@@ -54,15 +53,15 @@
       <div class="modal-content">
         <div class="modal-header">
 
-          <h2>SSC BATTLESHIP FRONTIER:WINNER</h2>
+          <h2>SSC PIRATE BATTLESHIPS:WINNER</h2>
         </div>
         <div class="modal-body">
   <h3>CONGRATULATIONS YOU HAVE DEFEATED THE OTHER UNDERWATER PIRATES!</h3>
   <p class="pName">...</p>
   <p class="score">Score: <span class="pScore"></span></p>
-  <p><img src="images/pirate-lost.gif" alt="pirate-lost" width="450" height="250"></p>
+  <p><img src="images/pirate-lost.gif" alt="pirate-lost" width="550" height="350"></p>
   <div>
-    <label for="fname">Care To Find More Treasure?</label>
+    <label class="tryAgainTxt" for="fname">Care To Find More Treasure?</label>
     <button class="gameOverBtn">Try Again</button>
   </div>
         </div>
@@ -74,15 +73,15 @@
       <div class="modal-content">
         <div class="modal-header">
 
-          <h2>SSC BATTLESHIP FRONTIER: GAME OVER</h2>
+          <h2>SSC PIRATE BATTLESHIPS: GAME OVER</h2>
         </div>
         <div class="modal-body">
   <h3>YOU HAVE BEEN DEFEATED BY THE UNDERWATER PIRATES!</h3>
   <p class="pName">...</p>
   <p class="score">Score: <span class="pScore"></span></p>
-  <p><img src="images/pirate-won.gif" alt="pirate-won" width="600" height="400"></p>
+  <p><img src="images/pirate-won.gif" alt="pirate-won" width="550" height="350"></p>
   <div>
-    <label for="fname">Would You Like To Try again? </label>
+    <label class="tryAgainTxt" for="fname">Would You Like To Try again? </label>
     <button class="gameOverBtn">Try Again</button>
   </div>
 
@@ -93,7 +92,7 @@
 
 
 <div class="title">
-<h1>SSC BATTLESHIP FRONTIER</h1>
+<h1>SSC PIRATE BATTLESHIPS</h1>
 </div>
 <div class="wrapper">
 
