AUDIO: Added background music

--- a/SSCBattleShips.html
+++ b/SSCBattleShips.html
@@ -17,6 +17,7 @@
 
   </head>
   <body>
+  <embed name="pirate-Theme" src="./audio/pirate-main.mp3" loop hidden="true" autostart="true">
     <!-- <audio id="boom">
     <source src="audio/pirate-sound.wav" type="audio/mpeg"></source>
   </audio> -->
@@ -32,6 +33,7 @@
   <p>Listen Up! For Yee In For a Bounty of Treasure</p>
   <p>These Scally Wags Have Gone Underwater For The Treasure</p>
   <p>Take Them Pirates Out To Gain The Treasure!!! </p>
+  <p>VIEW THE SHIPS BEFORE THEY GO UNDERWATER!</p>
   <p class="missionBrief"> Eliminate The Ships By Selecting The Correct Place On The Grid</p>
 
   <div>
