TEXT: Changed font to make it easier to read

--- a/SSCBattleShips.html
+++ b/SSCBattleShips.html
@@ -102,7 +102,7 @@
 <p class="score">Score: <span class="pScore"></span></p>
 <p class="">Cannonball: <span class="pCannon"></span></p>
 <p class="">Pirates Left: <span class="pPirates"></span></p>
-  <img class="image2" src="images/pirate-icon.gif" alt="pirate gang">
+  <img class="image2" src="./images/pirate-icon.gif" alt="pirate gang">
 </div>
 
 <div class="mainGame">
