AUDIO: fixed the loop sound on the game

--- a/SSCBattleShips.html
+++ b/SSCBattleShips.html
@@ -17,7 +17,9 @@
 
   </head>
   <body>
-  <embed name="pirate-Theme" src="./audio/pirate-main.mp3" loop hidden="true" autostart="true">
+    <audio autoplay loop preload="auto">
+    <source src="audio/pirate-main.mp3" type="audio/mpeg;">
+    </audio>
 
     <div id="myModal" class="modalManual">
 
